--- a/intentTEST/app/src/main/AndroidManifest.xml
+++ b/intentTEST/app/src/main/AndroidManifest.xml
@@ -14,11 +14,18 @@
         android:theme="@style/Theme.IntentTEST"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".ChildActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
