--- a/GIaodienmanhinh-Tuan1/app/src/main/AndroidManifest.xml
+++ b/GIaodienmanhinh-Tuan1/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         <activity
             android:name=".Profile"
             android:exported="false" />
+        <activity android:name=".SigninActivity"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
